--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Build Docker image
       run: |
         echo "🔨 Building PlayBee Backend version ${{ steps.version.outputs.VERSION }}"
-        docker build -f Dockerfile.backend -t ${{ secrets.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.VERSION }} .
-        docker build -f Dockerfile.backend -t ${{ secrets.DOCKER_IMAGE_NAME }}:latest .
+        docker build -f Dockerfile -t ${{ secrets.DOCKER_IMAGE_NAME }}:${{ steps.version.outputs.VERSION }} .
+        docker build -f Dockerfile -t ${{ secrets.DOCKER_IMAGE_NAME }}:latest .
 
     # Push para Docker Hub
     - name: Push Docker
