--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "npm": "^11.4.1",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "zod": "^3.25.48"
