--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
-    "start:migrate": "prisma migrate deploy && node dist/server.js"
+    "start": "tsx watch src/server.ts",
+    "start:migrate": "prisma migrate deploy && node src/server.ts"
   },
   "keywords": [],
   "author": "",
